browser control present on some keyboards.  These buttons are disabled
by default, since enabling them prevents their system-wide use when
Emacs has focus.  To enable them, set the variable
w32-pass-multimedia-buttons to nil.  See the doc string of that variable
for the list of extra keys that are available.

* Incompatible Lisp Changes in Emacs 23.1

+++
** The multibyteness of process filters is determined by the coding-system
used for decoding.  The functions `process-filter-multibyte-p' and
`set-process-filter-multibyte' are obsolete.

** The behavior of map-char-table has changed.  It may call the
specified function with a cons (FROM . TO) as a key if characters in
that range have the same value.

** The value of the function `charset-id' is now always 0.

** The functions `register-char-codings' and `coding-system-spec'
have been removed.

** The cpXXX coding systems are now supported automatically.  The
functions cp-...-codepage, which you had to use in Emacs 22 to enable
support for these coding systems, have been deleted.

+++
** The function `dired-call-process' has been removed.

** The variable `byte-compile-warnings' can now be a list starting with `not',
meaning to disable the specified warnings.  The meaning of this list
may therefore be the reverse of what you expect (of course, this is
only an issue if you make use of the new `not' syntax).  Rather than
checking/manipulating elements directly, use the new functions
`byte-compile-warning-enabled-p', `byte-compile-disable-warning', and
`byte-compile-enable-warning.'

** `mode-name' is no longer guaranteed to be a string.
Use `(format-mode-line mode-name)' to ensure a string value.

** The following features have been removed.  They were used for
displaying various scripts with specific fonts, and are no longer
needed now that OpenType font support is available:

*** `devanagari' and `devan-util', and all associated devanagari-* and
dev-* functions and variables (formerly used for Devanagari script).