@@ -654,6 +654,9 @@ for the list of extra keys that are available.
 
 * Incompatible Lisp Changes in Emacs 23.1
 
+** `functionp' returns nil for special forms.
+I.e. it only returns t for objects that can be passed `funcall'.
+
 +++
 ** The multibyteness of process filters is determined by the coding-system
 used for decoding.  The functions `process-filter-multibyte-p' and
